fix misaligned icons and add disk usage module

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -36,6 +36,18 @@ window#waybar.hidden {
 	background: #bd93f9;
 }
 
+#disk {
+	margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	transition: none;
+	color: #161320;
+	background: #bd93f9;
+}
+
 #pulseaudio {
 	margin-top: 6px;
 	margin-left: 8px;
@@ -121,7 +133,7 @@ window#waybar.hidden {
 }
 
 #custom-launcher {
-	font-size: 18px;
+	font-size: 16px;
 	margin-top: 6px;
 	margin-left: 8px;
 	padding-left: 10px;
